--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "moment": "^2.29.4",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.54.9"
   },
   "devDependencies": {
     "eslint": "8.22.0",
